# PipeY86

./: CMakeLists.txt  PipeY86.kdev4  README.md  index.html  instruction.cpp  instruction.h  instruction.h~  instructionirmovl.cpp  instructionjump.cpp  instructionmrmovl.cpp  instructionop.cpp~  instructionprivate.cpp  instructionprivate.h  instructionrmmovl.cpp  instructionrrmovl.cpp  main.cpp  params.json  pipecmd.cpp  pipelineloader.cpp  pipelineloader.h  resources.qrc  utility.h  y86pipeline.cpp  y86pipeline.h
.kdev4/: PipeY86.kdev4
instruction/: instructioncall.cpp  instructionhalt.cpp  instructionirmovl.cpp  instructionjump.cpp  instructionmrmovl.cpp  instructionop.cpp  instructionpop.cpp  instructionpush.cpp  instructionret.cpp  instructionrmmovl.cpp  instructionrrmovl.cpp
qml/: old.qml  test.qml
qml/container/: decodecontainer.qml  executecontainer.qml  fetchcontainer.qml  memorycontainer.qml  qmldir  registercontainer.qml  writebackcontainer.qml
qml/module/: button.qml  qmldir  stageindicator.qml
qml/text/: alignedtext.qml  qmldir
s2o/: 1.yo  1.ys  assembler.cpp  assembler.h  build.h  check.h  main.cpp  s2o.kdev4  s2o.sln  tools.h
s2o/.kdev4/: s2o.kdev4
s2o/Debug/: s2o.ilk
s2o/TestCode/: prog4.yo  prog8.yo
s2o/outputCode/: prog5.yo
s2o/s2o/: 1.ys  main.cpp~  s2o.vcxproj  s2o.vcxproj.filters
s2o/s2o/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  s2o.lastbuildstate  s2o_manifest.rc  vc100.idb
s2o/s2o/TestCode/: asum.yo  prog5.yo  prog6.yo
tests/: 1.yo  1.ys  abs-asum-jmp.yo  asum.yo  asum.ys  asumi.ys  asuml.ys  exceptions.yo  exceptions.ys  jishao.ys  prog5.yo  prog6.yo  prog7.yo  prog8.yo  pushtest.yo  ret-hazard.ys
tests/yo/: 1.yo  2.yo  abs-asum-jmp.yo  asum.yo  asuml.yo  asumr.yo  cjr.yo  j-cc.yo  jishao.yo  poptest.yo  prog.yo  prog1.yo  prog10.yo  prog2.yo  prog3.yo  prog4.yo  prog5.yo  prog6.yo  prog7.yo  pushtest.yo
tests/ys/: 2.ys  3.ys  asuml.ys  jishao.ys  pushquestion.ys~  ret-hazard.ys~
